Version 0.8.0.9000
------------------------------------------------------------------------------
General:
* Functions `std()` and `center()` were removed and are now in the sjmisc-package (https://cran.r-project.org/package=sjmisc).

New functions:
* `xtab_statistics()` to compute various measures of assiciation for contigency tables.

Bug fixes:
* `prop()` did not work for non-labelled data frames when used with grouped data frames.

Version 0.8.0
------------------------------------------------------------------------------
New functions:
* `svy()` to compute robust standard errors for weighted models, adjusting the residual degrees of freedom to simulate sampling weights.
* `zero_count()` to check whether a poisson-model is over- or underfitting zero-counts in the outcome.
* `pred_accuracy()` to calculate accuracy of predictions from model fit.
* `outliers()` to detect outliers in (generalized) linear models.
* `heteroskedastic()` to check linear models for (non-)constant error variance.
* `autocorrelation()` to check linear models for auto-correlated residuals.
* `normality()` to check whether residuals in linear models are normally distributed or not.
* `multicollin()` to check predictors in a model for multicollinearity.
* `check_assumptions()` to run a set of model assumption checks.

Changes to functions:
* `prop()` no longer works within dplyr's `summarise()` function. Instead, when now used with grouped data frames, a summary of proportions is directly returned as tibble.
* `se()` now computes adjusted standard errors for generalized linear (mixed) models, using the Taylor series-based delta method.

Version 0.7.1
------------------------------------------------------------------------------
General:
* Package depends on R-version >= 3.3.

Changes to functions:
* `prop()` gets a `digits`-argument to round the return value to a specific number of decimal places.

Version 0.7.0
------------------------------------------------------------------------------